# wwww

./: .gitignore  README.md  build-installers.sh  capacitor.config.ts  electron.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
android-native/: settings.gradle
android-native/app/: build.gradle  proguard-rules.pro
builds/: README.md  build-android.sh  build-linux.sh  build-windows.bat
desktop/: main.js  package.json  preload.js
docs/: SCALING_ROADMAP.md
linux-native/: meson.build
linux-native/src/: main.c
linux-native/src/data/: database.c  database.h  media_storage.c  media_storage.h  secure_storage.c  secure_storage.h
linux-native/src/network/: e2ee.c  matrix_client.c  matrix_client.h  media_cache.c  offline_queue.c  room_operations.c  sync_service.c
linux-native/src/ui/: chat_view.c  chat_view.h  contacts_window.c  content_window.c  create_chat_window.c  group_settings_window.c  login_window.c  login_window.h  main_window.c  main_window.h  profile_window.c  search_window.c  settings_window.c  webview_window.c  webview_window.h
linux-native/src/util/: helpers.c  system.c
linux-native/tests/: tests.c
public/: manifest.json  sw.js
public/installers/: NexaLink-Android.html  NexaLink-Install.bat  NexaLink-iOS.html  nexalink-install.sh
scripts/: build-all-native.sh  build-android.sh  build-installers.sh
server/: .env.example  docker-compose.yml
server/admin-api/: Dockerfile  package.json  server.js
server/coturn/: turnserver.conf
server/element/: config.json
server/logrotate/: nexalink
server/media-purger/: Dockerfile  purger.js  (+1 more)
src/: App.tsx  index.css  main.tsx
(+180 files in other folders)
